Minor changes to head

--- a/_ore_extends.scss
+++ b/_ore_extends.scss
@@ -113,6 +113,10 @@
     margin-left: 0;
     margin-right: 0;
 }
+%ore-m__topbot--0 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
 
 
 // ----- Side paddings for layout ----- //
